@@ -1,3 +1,7 @@
+26/07/2020
+-   "Drone production prestige" now act as described
+-   Ui fix
+
 25/07/2020
 -   New "old style" ui for workers. Cards ui can be re enabled on ui options.
 -   Enemies now equip more modules.
